# Snake_Game

./: .gitignore  Makefile  README.md  compile_commands.json  game  log.txt
.cache/clangd/index/: frontend.hpp.B2D7B9924FE7AC28.idx  frontendInterface.h.3C228CEE112EE42E.idx  gameModel.h.FE88602EAD1FE1CE.idx  globals.h.2D9B377DE1370AF6.idx  render.h.E2ACC400BDB1AB0D.idx  snake.hpp.11C9D3469F593572.idx
brick_game/: globals.cpp  globals.h
brick_game/models/: controller.cpp  controller.h  frontendInterface.h  gameModel.h  render.h
brick_game/snake/: FSM.cpp  frontend.hpp  snake.cpp  snake.hpp  snake_fsm.cpp
brick_game/tetris/: FSM.cpp  brick_game.c  brick_game.h  frontend.hpp  helper.cpp  s21_matrix.h  tetris.cpp  tetris.hpp
examples/: non_template_snake_render_demo.cpp  polymorphism_templates_demo.cpp
gui/: game.cpp
gui/cli/: cli_controller.cpp  cli_controller.h  tetris.c  tetris.h
gui/cli/snake/: key_handlers.cpp  screen_handlers.cpp  snake.hpp
gui/cli/tetris/: key_handlers.cpp  screen_handlers.cpp  tetris.c  tetris.hpp
gui/desktop/: snake.hpp
gui/desktop/Tetris/: CMakeLists.txt  desktop_tetris_controller.cpp  desktop_tetris_controller.h  key_handlers.cpp  main.cpp  next_figure.cpp  next_figure.h  next_figure.ui  screen_handlers.cpp  tetris_desktop_render.cpp  tetris_desktop_render.h  tetris_desktop_render.ui
gui/desktop/snake/: CMakeCache.txt.prev  CMakeLists.txt  controller.h  desktop_snake_controller.cpp  desktop_snake_controller.h  key_handlers.cpp  main.cpp  mainwindow.cpp  pixeltextwidget.cpp  pixeltextwidget.h  screen_handlers.cpp  snake.cpp  snake.hpp  snake_desktop_render.cpp  snake_desktop_render.h  snake_desktop_render.ui
tests/: clone_test.c  game_test.c  main.cpp  main.h  rotate_test.c
tests/snake/: apple_test.cpp  forward_test.cpp  hi_score.cpp  lose_test.cpp  reset_test.cpp  snake_test.hpp  update_state_test.cpp  win_test.cpp
tests/tetris/: check_collision_test.c  collision_test.cpp  drop_figure_test.c  game_state_test.cpp  lock_test.cpp  main.c  move_test.c  move_test.cpp  rotate_test.cpp  spawn_test.cpp  sum_figure.c  sum_matrices_test.c  tetris_test.hpp  update_state_test.cpp  validate_test.c
